refactor(code-card): 不要なコード削除 #71

--- a/src/app/code-card/code-card/code-card.component.html
+++ b/src/app/code-card/code-card/code-card.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <ng-container *ngIf="result.length; else default">
+  <ng-container *ngIf="result?.length; else default">
     <div class="grid">
       <mat-card *ngFor="let codeCard of filterCards$ | async" class="card">
         <a
