refactor(code-card): 変数名修正 #71

--- a/src/app/code-card/code-card/code-card.component.html
+++ b/src/app/code-card/code-card/code-card.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <ng-container *ngIf="result?.length; else default">
     <div class="grid">
-      <mat-card *ngFor="let codeCard of filterCards$ | async" class="card">
+      <mat-card *ngFor="let codeCard of filteredCards$ | async" class="card">
         <a
           class="card__trigger"
           routerLink="/code-detail/{{ codeCard.cardId }}"
