--- a/src/app/code-card/code-card/code-card.component.html
+++ b/src/app/code-card/code-card/code-card.component.html
@@ -6,11 +6,10 @@
     "
   >
     <h1>
-      {{ paramHitsStore.name }}で利用できるお支払い方法 :
-      {{ filteredCards.length }}件
+      {{ searchQuery }}で利用できるお支払い方法 : {{ filteredCards.length }}件
     </h1>
     <h1 *ngIf="!filteredCards.length">
-      {{ paramHitsStore.name }}で利用できるお支払い方法がありません
+      {{ searchQuery }}で利用できるお支払い方法はありません
     </h1>
     <div class="grid">
       <mat-card *ngFor="let codeCard of filteredCards" class="card">
