fix(detail): pipe修正 #70

--- a/src/app/electron-detail/electron-detail/electron-detail.component.html
+++ b/src/app/electron-detail/electron-detail/electron-detail.component.html
@@ -51,7 +51,7 @@
       <mat-tab-group mat-align-tabs="center">
         <mat-tab label="カテゴリ別">
           <div
-            *ngFor="let category of electronCard.storeIds | idToStore: 'real'"
+            *ngFor="let category of electronCard.storeIds | idToStore"
             class="store__cover"
           >
             <h3 *ngIf="category.items.length" class="store__category">
