feat(routing): shellの実装 #70

--- a/src/app/not-found/not-found.component.scss
+++ b/src/app/not-found/not-found.component.scss
@@ -1,8 +1,11 @@
-h1 {
+:host {
   text-align: center;
+}
+
+h1 {
   margin: 40px 0;
 }
 
-p {
-  text-align: center;
+.back-btn {
+  margin: 40px 0;
 }
