--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,4 +1,7 @@
 <div class="container">
   <h1>404</h1>
-  <p>お探しのページが見つかりませんでした</p>
+  <p>お探しのページは見つかりませんでした</p>
+  <button class="back-btn" routerLink="/" mat-raised-button color="primary">
+    Topへ戻る
+  </button>
 </div>
