--- a/src/app/create/form/form.component.scss
+++ b/src/app/create/form/form.component.scss
@@ -2,7 +2,6 @@
 
 .form-container {
   margin: 0 auto;
-  padding: 80px 0 0;
   max-width: 700px;
 }
 
@@ -43,6 +42,11 @@
   &__btn {
     text-align: center;
   }
+}
+
+.back-btn {
+  text-align: center;
+  margin-top: 40px;
 }
 
 .upload {
