--- a/src/app/drawer/drawer.component.scss
+++ b/src/app/drawer/drawer.component.scss
@@ -6,3 +6,16 @@
 p {
   padding-left: 16px;
 }
+
+mat-icon {
+  font-size: 20px;
+  width: 20px;
+  height: 20px;
+}
+
+.link {
+  padding-left: 8px;
+  font-size: 12px;
+  width: 12px;
+  height: 12px;
+}
