--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,10 +13,10 @@ body {
 
 .container {
   margin: 0 auto;
-  padding: 80px 24px 0;
+  padding: 80px 24px 80px;
   max-width: 1024px;
   @include sp {
-    padding: 120px 24px 0;
+    padding: 120px 24px 80px;
   }
 }
 
