--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -87,7 +87,7 @@
         <span>ログアウト</span>
       </button>
       <mat-divider></mat-divider>
-      <button mat-menu-item>
+      <button routerLink="/settings" mat-menu-item>
         <mat-icon>settings</mat-icon>
         <span>設定</span>
       </button>
