--- a/src/app/code-card/code-card/code-card.component.html
+++ b/src/app/code-card/code-card/code-card.component.html
@@ -1,15 +1,10 @@
 <div class="container">
-  <ng-container
-    *ngIf="
-      result?.length && filteredCards$ | async as filteredCards;
-      else default
-    "
-  >
-    <h1>
+  <ng-container *ngIf="filteredCards$ | async as filteredCards">
+    <h1
+      class="search-title"
+      *ngIf="filteredCards.length && filteredCards$ != codeCards$"
+    >
       {{ searchQuery }}で利用できるお支払い方法 : {{ filteredCards.length }}件
-    </h1>
-    <h1 *ngIf="!filteredCards.length">
-      {{ searchQuery }}で利用できるお支払い方法はありません
     </h1>
     <div class="grid">
       <mat-card *ngFor="let codeCard of filteredCards" class="card">
@@ -25,21 +20,8 @@
         </a>
       </mat-card>
     </div>
+    <h1 class="search-title" *ngIf="!filteredCards.length">
+      {{ searchQuery }}で利用できるお支払い方法はありません
+    </h1>
   </ng-container>
-  <ng-template #default>
-    <div class="grid">
-      <mat-card *ngFor="let codeCard of codeCards$ | async" class="card">
-        <a
-          class="card__trigger"
-          routerLink="/code-detail/{{ codeCard.cardId }}"
-        >
-          <div
-            class="card__cover"
-            [style.background-image]="'url(' + codeCard.imageURL + ')'"
-          ></div>
-          <p class="card__name">{{ codeCard.name }}</p>
-        </a>
-      </mat-card>
-    </div>
-  </ng-template>
 </div>
