--- a/src/app/settings/settings/settings.component.html
+++ b/src/app/settings/settings/settings.component.html
@@ -1,3 +1,54 @@
 <div class="container">
-  <p>settings works!</p>
+  <p>アカウント</p>
+  <ng-container class="settings" *ngIf="user$ | async as user">
+    <div class="account">
+      <img class="account__icon" [src]="user.avatarURL" alt="" />
+      <div class="account__body">
+        <h1>{{ user.name }}</h1>
+        <h2>{{ user.email }}</h2>
+      </div>
+    </div>
+    <mat-tab-group>
+      <mat-tab label="設定">
+        <div class="form-container">
+          <form>
+            <div class="edit">
+              <div
+                class="upload"
+                [style.background-image]="'url(' + user.avatarURL + ')'"
+                (click)="imageInput.click()"
+              >
+                <input
+                  type="file"
+                  style="display: none;"
+                  accept=".png, .img, .jpeg"
+                  (change)="uploadAvatar($event)"
+                  #imageInput
+                  required
+                />
+              </div>
+            </div>
+
+            <mat-form-field>
+              <mat-label>ユーザー名</mat-label>
+              <input
+                matInput
+                autocomplete="off"
+                [formControl]="userControl"
+                required
+              />
+              <mat-error *ngIf="userControl.hasError('required')"
+                >必須入力です</mat-error
+              >
+              <mat-error *ngIf="userControl.hasError('maxlength')"
+                >長すぎます</mat-error
+              >
+            </mat-form-field>
+            <button mat-raised-button color="primary">更新する</button>
+          </form>
+        </div>
+      </mat-tab>
+      <mat-tab label="お支払い情報"> Content 2 </mat-tab>
+    </mat-tab-group>
+  </ng-container>
 </div>
