--- a/src/app/electron-card/electron-card/electron-card.component.html
+++ b/src/app/electron-card/electron-card/electron-card.component.html
@@ -1,15 +1,7 @@
 <div class="container">
-  <ng-container
-    *ngIf="
-      result?.length && filteredCards$ | async as filteredCards;
-      else default
-    "
-  >
+  <ng-container *ngIf="filteredCards$ | async as filteredCards">
     <h1 *ngIf="filteredCards.length">
       {{ searchQuery }}で利用できるお支払い方法 : {{ filteredCards.length }}件
-    </h1>
-    <h1 *ngIf="!filteredCards.length">
-      {{ searchQuery }}で利用できるお支払い方法はありません
     </h1>
     <div class="grid">
       <mat-card *ngFor="let electronCard of filteredCards" class="card">
@@ -25,8 +17,16 @@
         </a>
       </mat-card>
     </div>
+    <h1 *ngIf="!filteredCards.length">
+      {{ searchQuery }}で利用できるお支払い方法はありません
+    </h1>
   </ng-container>
-  <ng-template #default>
+
+  <ng-container *ngIf="searchQuery && !result?.length">
+    <h1>{{ searchQuery }}で利用できるお支払い方法はありません</h1>
+  </ng-container>
+
+  <ng-container *ngIf="!searchQuery">
     <div class="grid">
       <mat-card
         *ngFor="let electronCard of electronCards$ | async"
@@ -44,5 +44,5 @@
         </a>
       </mat-card>
     </div>
-  </ng-template>
+  </ng-container>
 </div>
