feat(header): viewCount実装 #83

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -91,7 +91,7 @@
         <mat-icon>settings</mat-icon>
         <span>設定</span>
       </button>
-      <button mat-menu-item>
+      <button routerLink="/intl/help" mat-menu-item>
         <mat-icon>help</mat-icon>
         <span>使い方</span>
       </button>
