--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -35,6 +35,7 @@
 
   <div *ngIf="user$ | async as user; else default" class="btns">
     <button
+      *ngIf="user.admin"
       class="btns__item"
       mat-flat-button
       color="primary"
