feat(settings): カード登録画面実装 #83

--- a/src/app/settings/settings/settings.component.html
+++ b/src/app/settings/settings/settings.component.html
@@ -82,7 +82,15 @@
           </div>
         </div>
       </mat-tab>
-      <mat-tab label="お支払い情報"> Content 2 </mat-tab>
+      <mat-tab label="お支払い情報">
+        <div class="form-container">
+          <h3>クレジットカード</h3>
+          <p>
+            クレジットカードは世界的な決済サービスStripeによって厳重に保管されており、漏洩の心配はありません。
+          </p>
+          <button mat-raised-button color="primary">カードを登録する</button>
+        </div>
+      </mat-tab>
     </mat-tab-group>
   </ng-container>
 </div>
