--- a/src/app/main-shell/main-shell.component.html
+++ b/src/app/main-shell/main-shell.component.html
@@ -12,3 +12,13 @@
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
+
+<div
+  *ngIf="isSticky$ | async"
+  class="sticky"
+  [class.active]="(isOpened$ | async) && (isMobile$ | async)"
+>
+  <button routerLink="/" mat-fab color="accent">
+    <mat-icon>compare_arrows</mat-icon>
+  </button>
+</div>
