--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
+:host {
+  display: block;
+}
+
 /* You can add global styles to this file, and also import other style files */
 @import 'mixins';
 
@@ -127,4 +131,21 @@ img {
       grid-template-columns: repeat(3, 1fr);
     }
   }
+}
+
+.sticky {
+  position: sticky;
+  text-align: right;
+  z-index: 2000;
+  bottom: 0;
+  margin: 0 auto;
+  padding: 24px;
+  max-width: 1024px;
+  @include sp {
+    padding: 16px;
+  }
+}
+
+.sticky.active {
+  z-index: 0;
 }
