feat(compare): component作成 #85

--- a/src/app/drawer/drawer.component.html
+++ b/src/app/drawer/drawer.component.html
@@ -25,7 +25,7 @@
       <p>ポイントカード</p>
     </a>
     <mat-divider></mat-divider>
-    <a mat-list-item routerLink="">
+    <a mat-list-item routerLink="/compare">
       <mat-icon>compare_arrows</mat-icon>
       <p>比較する</p>
     </a>
