--- a/src/app/main-shell/main-shell.component.html
+++ b/src/app/main-shell/main-shell.component.html
@@ -18,7 +18,7 @@
   class="sticky"
   [class.active]="(isOpened$ | async) && (isMobile$ | async)"
 >
-  <button routerLink="/" mat-fab color="accent">
+  <button routerLink="/compare" mat-fab color="accent">
     <mat-icon>compare_arrows</mat-icon>
   </button>
 </div>
