feat(compare): 選択での画面遷移 #85

--- a/src/app/compare/compare/compare.component.html
+++ b/src/app/compare/compare/compare.component.html
@@ -1,3 +1,17 @@
 <div class="container">
-  <p>compare works!</p>
+  <div class="compare">
+    <h1>比較する</h1>
+    <p>compare works!</p>
+    <mat-form-field appearance="outline">
+      <mat-label>選択する</mat-label>
+      <mat-select (selectionChange)="navigate($event.value)">
+        <mat-option
+          *ngFor="let codeCard of codeCards$ | async"
+          [value]="codeCard.cardId"
+        >
+          {{ codeCard.name }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
 </div>
