refactor(header): 表示の変更 #85

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -98,7 +98,7 @@
       </button>
       <button mat-menu-item>
         <mat-icon>attach_money</mat-icon>
-        <span>広告を剥がす</span>
+        <span>広告を非表示にする</span>
       </button>
     </mat-menu>
   </div>
