--- a/src/app/compare/compare/compare.component.html
+++ b/src/app/compare/compare/compare.component.html
@@ -2,16 +2,48 @@
   <div class="compare">
     <h1>比較する</h1>
     <p>compare works!</p>
-    <mat-form-field appearance="outline">
-      <mat-label>選択する</mat-label>
-      <mat-select (selectionChange)="navigate($event.value)">
-        <mat-option
-          *ngFor="let codeCard of codeCards$ | async"
-          [value]="codeCard.cardId"
+    <div class="compare__wrapper">
+      <div *ngFor="let index of indexes" class="compare__cards">
+        <mat-form-field appearance="outline">
+          <mat-label>選択する</mat-label>
+          <mat-select (selectionChange)="navigate($event.value, index)">
+            <mat-option
+              *ngFor="let codeCard of codeCards$ | async"
+              [value]="codeCard.cardId"
+            >
+              {{ codeCard.name }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <div
+          *ngIf="selectedCards$[index] | async as selectedCard"
+          class="detail"
         >
-          {{ codeCard.name }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+          <div class="card">
+            <div
+              class="card__cover"
+              [style.background-image]="'url(' + selectedCard.imageURL + ')'"
+            ></div>
+          </div>
+          <h2>精算方法</h2>
+          <p>{{ selectedCard.payment }}</p>
+          <h2>チャージ方法</h2>
+          <p>{{ selectedCard.charge }}</p>
+          <h2>オートチャージ</h2>
+          <p>{{ selectedCard.autoCharge }}</p>
+          <h2>利用できるクレジットカード</h2>
+          <p>{{ selectedCard.availableCredit }}</p>
+          <h2>ポイント</h2>
+          <p>{{ selectedCard.point }}%</p>
+          <P>{{ selectedCard.addPoint }}</P>
+          <h2>残高やポイントの有効期限</h2>
+          <p>{{ selectedCard.expiration }}</p>
+          <h2>個人間送金</h2>
+          <p>{{ selectedCard.pushMoney }}</p>
+          <h2>出金</h2>
+          <p>{{ selectedCard.pullMoney }}</p>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
