feat(compare): レスポンシブ対応 #85

--- a/src/app/compare/compare/compare.component.scss
+++ b/src/app/compare/compare/compare.component.scss
@@ -1,3 +1,5 @@
+@import 'mixins';
+
 .compare {
   text-align: center;
   &__wrapper {
@@ -6,6 +8,9 @@
   }
   &__cards {
     padding: 40px;
+    @include sp {
+      padding: 16px;
+    }
   }
 }
 
