fix(detail): 遷移先変更 #85

--- a/src/app/code-detail/code-detail/code-detail.component.html
+++ b/src/app/code-detail/code-detail/code-detail.component.html
@@ -83,7 +83,7 @@
       <div class="sticky__container">
         <button
           [routerLink]="['/compare']"
-          [queryParams]="{ cardId1: codeCard.cardId }"
+          [queryParams]="{ cardIds: codeCard.cardId }"
           mat-fab
           color="accent"
         >
