--- a/src/styles.scss
+++ b/src/styles.scss
@@ -146,3 +146,11 @@ img {
     padding: 24px;
   }
 }
+
+.compare {
+  margin: 40px 0;
+  text-align: center;
+  &__select {
+    margin: 0 24px;
+  }
+}
