--- a/src/app/code-detail/code-detail/code-detail.component.html
+++ b/src/app/code-detail/code-detail/code-detail.component.html
@@ -82,7 +82,7 @@
     <div class="sticky">
       <div class="sticky__container">
         <button
-          [routerLink]="['/compare']"
+          [routerLink]="['/compare', 'モバイル決済']"
           [queryParams]="{ cardIds: codeCard.cardId }"
           mat-fab
           color="accent"
