--- a/src/app/electron-card/electron-card/electron-card.component.html
+++ b/src/app/electron-card/electron-card/electron-card.component.html
@@ -24,4 +24,41 @@
       {{ searchQuery }}で利用できるお支払い方法はありません
     </h1>
   </ng-container>
+
+  <mat-card class="compare">
+    <mat-card-header>電子マネーを比較する</mat-card-header>
+    <form [formGroup]="form" (ngSubmit)="navigate()">
+      <mat-form-field class="compare__select">
+        <mat-select formControlName="firstSelect">
+          <mat-option
+            *ngFor="
+              let card of (lastSelectControl.value.length
+                ? firstChoices$
+                : electronCards$
+              ) | async
+            "
+            [value]="card.cardId"
+          >
+            {{ card.name }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field class="compare__select">
+        <mat-select formControlName="lastSelect">
+          <mat-option
+            *ngFor="
+              let card of (firstSelectControl.value.length
+                ? lastChoices$
+                : electronCards$
+              ) | async
+            "
+            [value]="card.cardId"
+          >
+            {{ card.name }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <button mat-raised-button color="primary">比較する</button>
+    </form>
+  </mat-card>
 </div>
