--- a/src/app/compare/compare/compare.component.html
+++ b/src/app/compare/compare/compare.component.html
@@ -6,7 +6,7 @@
       <div class="compare__select">
         <div
           *ngFor="let index of (mobileService.isMobile ? 2 : 3) | times"
-          class="compare__cards"
+          class="compare__option"
         >
           <mat-form-field appearance="outline">
             <mat-label>選択する</mat-label>
