--- a/src/app/compare/compare/compare.component.scss
+++ b/src/app/compare/compare/compare.component.scss
@@ -3,8 +3,10 @@
 .compare {
   text-align: center;
   &__wrapper {
-    // display: flex;
-    justify-content: center;
+    padding: 40px;
+    @include sp {
+      padding: 0;
+    }
   }
   &__select {
     display: flex;
@@ -16,9 +18,6 @@
       padding: 8px;
     }
   }
-  &__detail {
-    // display: flex;
-  }
 }
 
 .compare-card {
@@ -26,6 +25,10 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 24px;
   margin-bottom: 40px;
+  @include sp {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 16px;
+  }
   &__cover {
     background: center/cover;
     padding-bottom: 52.5%;
@@ -33,8 +36,24 @@
   }
 }
 
-.detail {
-  max-width: 360px;
-  margin: 0 auto;
-  padding: 0;
+.row {
+  margin-bottom: 48px;
+  &__header {
+    margin-bottom: 48px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid #ccc;
+    text-align: left;
+  }
+  &__grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 24px;
+    @include sp {
+      grid-template-columns: repeat(2, 1fr);
+      gap: 16px;
+    }
+  }
+  @include sp {
+    margin-bottom: 32px;
+  }
 }
