--- a/src/app/compare/compare/compare.component.scss
+++ b/src/app/compare/compare/compare.component.scss
@@ -2,6 +2,15 @@
 
 .compare {
   text-align: center;
+  &__title {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 32px;
+    h1 {
+      margin: 0;
+    }
+  }
   &__wrapper {
     padding: 40px;
     @include sp {
@@ -9,30 +18,7 @@
     }
   }
   &__select {
-    display: flex;
-    justify-content: center;
-  }
-  &__option {
-    padding: 16px;
-    @include sp {
-      padding: 8px;
-    }
-  }
-}
-
-.compare-card {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 24px;
-  margin-bottom: 40px;
-  @include sp {
-    grid-template-columns: repeat(2, 1fr);
-    gap: 16px;
-  }
-  &__cover {
-    background: center/cover;
-    padding-bottom: 52.5%;
-    box-sizing: border-box;
+    min-width: 80px;
   }
 }
 
@@ -52,6 +38,11 @@
       grid-template-columns: repeat(2, 1fr);
       gap: 16px;
     }
+  }
+  &__cover {
+    background: center/cover;
+    padding-bottom: 52.5%;
+    box-sizing: border-box;
   }
   @include sp {
     margin-bottom: 32px;
