refactor(detail): タグ修正 #85

--- a/src/app/electron-detail/electron-detail/electron-detail.component.html
+++ b/src/app/electron-detail/electron-detail/electron-detail.component.html
@@ -50,7 +50,7 @@
       <h2 class="store__title">使えるお店</h2>
       <mat-tab-group mat-align-tabs="center">
         <mat-tab label="カテゴリ別">
-          <h3>※店舗によってはご利用頂けない場合があります</h3>
+          <p>※店舗によってはご利用頂けない場合があります</p>
           <div
             *ngFor="let category of electronCard.storeIds | idToStore"
             class="store__cover"
