feat(register-card): UI実装 #72

--- a/src/app/shared/register-card-dialog/register-card-dialog.component.html
+++ b/src/app/shared/register-card-dialog/register-card-dialog.component.html
@@ -1,1 +1,30 @@
-<p>register-card-dialog works!</p>
+<h1 mat-dialog-title>クレジットカードの登録</h1>
+<div mat-dialog-content>
+  <form [formGroup]="form">
+    <mat-form-field>
+      <mat-label>カードの名義</mat-label>
+      <input
+        type="text"
+        matInput
+        required
+        formControlName="name"
+        autocomplete="name"
+      />
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>メール</mat-label>
+      <input
+        type="email"
+        matInput
+        required
+        formControlName="email"
+        autocomplete="email"
+      />
+    </mat-form-field>
+    <div class="card-element" #cardElement></div>
+    <button mat-flat-button>キャンセル</button>
+    <button mat-raised-button color="primary" [disabled]="form.invalid">
+      登録する
+    </button>
+  </form>
+</div>
