--- a/src/app/shared/register-card-dialog/register-card-dialog.component.html
+++ b/src/app/shared/register-card-dialog/register-card-dialog.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>クレジットカードの登録</h1>
 <div mat-dialog-content>
-  <form [formGroup]="form" class="form">
+  <form [formGroup]="form" (ngSubmit)="createCard()" class="form">
     <mat-form-field>
       <mat-label>カードの名義</mat-label>
       <input
